# fastfood

./: .env  .gitignore  Dockerfile  README.md  README.md.backup  compose_app.yml  compose_google.yml  compose_test.yml  creds.json  docker-compose.yml  dump.rdb  example.env  manage.py  openapi.json  pyproject.toml
admin/: .~lock.Menu.xlsx#  Menu.xlsx
bg_tasks/: bg_task.py  parser.py  updater.py
fastfood/: app.py  config.py  crud.py  dbase.py  models.py  routes.py  schemas.py  utils.py
fastfood/cruds/: __init__.py  dish.py  menu.py  redis_cache.py  submenu.py
fastfood/repository/: __init__.py  dish.py  menu.py  redis.py  submenu.py  summary.py
fastfood/routers/: dish.py  menu.py  submenu.py  summary.py
fastfood/service/: dish.py  menu.py  submenu.py  summary.py
scripts/: db_prepare.sql  migrate_and_run.sh  testing.sh
tests/: conftest.py  repository.py  test_api.py  test_crud.py  test_dish.py  test_menu.py  test_postman.py  test_submenu.py  test_summary.py  urls.py
