[tool.poetry]
name = "fastfood"
version = "0.1.0"
description = ""
authors = ["pi3c <pi3c@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0.post1"
pytest-asyncio = "^0.23.3"
redis = "^4.6.0"
types-redis = "^4.6.0.3"
mypy = "^1.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ". fastfood"
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning"
]
